Landing page text updated

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,10 @@ button {
   width: 185px;
   height: 50px;
 }
+button:hover{
+  font-weight: 600;
+  box-shadow: 3px 3px 3px  #e74c3c;
+}
 
 .caution{
   position: relative;
